Consolidate repositories into RepositoryManager